--- a/Bloggie.Web/appsettings.json
+++ b/Bloggie.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BloggieDbConnectionString": "Server=LAPTOP-24VPJT1G\\SQLSERVER2022;Database=BloggieDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+  }
 }
